# wahlen_bs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.toml  regression.ipynb
.github/workflows/: ci.yml  ci_web.yml
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.cjs
dashboard/src/: app.d.ts
dashboard/src/components/: map.svelte  prediction.svelte  timeline.svelte
dashboard/src/lib/: config.ts  elections.ts  types.ts
dashboard/src/lib/assets/: districts.geojson
dashboard/src/lib/data/: results_germany.csv
dashboard/src/routes/: +layout.svelte  +page.svelte  +page.ts
dashboard/src/routes/map/: +page.svelte  +page.ts
dashboard/src/routes/prediction/: +page.svelte  +page.ts
dashboard/src/routes/timeline/: +page.svelte
db/: elections.db  elections.json  init.sql  results_germany.csv  results_germany.xlsx
harvester/: __main__.py  dictionaries.py
server/: .dockerignore  .env  Dockerfile
server/src/models/: party.rs  vote.rs
src/: error.rs  http.rs  lib.rs  main.rs  models.rs
src/models/: election.rs  mod.rs  party.rs  region.rs  vote.rs
