[package]
name = "wahlen_bs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
