[package]
name = "wahlen_bs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = [
    "catch-panic",
    "compression-full",
    "timeout",
    "trace",
    "cors",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
